k8s/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: tripview-api-canary
  namespace: tripview
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 5
        - pause: { duration: 5m }
        - setWeight: 25
        - pause: { duration: 10m }
        - setWeight: 50
        - pause: { duration: 10m }
        - setWeight: 100
      canaryService: tripview-api-canary
      stableService: tripview-api
      trafficRouting:
        nginx:
          stableIngress: tripview-ingress
  selector:
    matchLabels:
      app: tripview-api
  template:
    metadata:
      labels:
        app: tripview-api
    spec:
      containers:
        - name: api
          image: tripview/api:canary
          ports:
            - containerPort: 3000
